<resources>
    <string name="app_name">Restaurante Robloxiano</string>
    <string name="inicio">Restaurante Robloxiano</string>

    <string name="presentacion">Menú</string>
    <string name="comidas">COMIDAS</string>
    <string name="tacos">TACOS</string>
    <string name="tacosnombre">Tipi Tacos</string>
    <string name="tacosdescripcion">Tacos robloxianos con carne de Brainrot y salsa de Bloxburg</string>
    <string name="tacosprecio">8 Robux</string>

    <string name="hamburguesa">HAMBURGUESAS</string>
    <string name="hamburguesanombre">Cheezburguer</string>
    <string name="hamburguesadescripcion">Hamburguesa robloxiana de queso con carne de Labubu</string>
    <string name="hamburguesaprecio">9 Robux</string>

    <string name="ensalada">ENSALADAS</string>
    <string name="ensaladanombre">Ensalada</string>
    <string name="ensaladadescripcion">Ensalada al estilo robloxiano con lechuga, tomate y condimentos</string>
    <string name="ensaladaprecio">5 Robux</string>

    <string name="pizza">PIZZA</string>
    <string name="pizzanombre">Pizza</string>
    <string name="pizzadescripcion">Pizza Robloxiana importada desde Work at Pizza Place, con ingredientes secretos</string>
    <string name="pizzaprecio">25 Robux</string>

    <string name="extras">ACOMPAÑAMIENTOS</string>

    <string name="papasnombre">Patatax</string>
    <string name="papasdescripcion">Papas caseras cosechadas de Grow a Garden fritas en aceite Robloxiano</string>
    <string name="papasprecio">4 Robux</string>

    <string name="frijolesnombre">Frijoles</string>
    <string name="frijolesdescripcion">Frijoles mágicos en lata cosechados en Grow a Garden</string>
    <string name="frijolesprecio">5 Robux</string>

    <string name="bolitasnombre">Diwali</string>
    <string name="bolitasdescripcion">Bolitas de Diwali con especies rellenas de queso</string>
    <string name="bolitasprecio">7 Robux</string>

    <string name="bebidas">BEBIDAS</string>

    <string name="bebidanombre">Bloxiade</string>
    <string name="bebidadescripcion">Bebida energizante sabor a brainrot</string>
    <string name="bebidaprecio">5 Robux</string>

    <string name="nombre_producto">Default</string>
    <string name="precio_producto">0 Robux</string>
    <string name="carrito">Carrito</string>

    <string name="pagar">Pagar</string>
    <string name="subtotal">Subtotal:</string>
    <string name="precio">33 Robux</string>

    <string name="carritovacio"> El carrito está vacío</string>
    <string name="gracias">Gracias por su compra!"</string>
    <string name="formatoprecio">Subtotal: %d Robux</string>

    <string name="desc_taco">Imagen de tacos al pastor</string>
    <string name="desc_hamburguesa">Imagen de hamburguesa clásica</string>
    <string name="desc_ensalada">Imagen de ensalada fresca</string>
    <string name="desc_pizza">Imagen de pizza pepperoni</string>
    <string name="desc_papas">Imagen de papas fritas</string>
    <string name="desc_frijoles">Imagen de frijoles charros</string>
    <string name="desc_bolitas">Imagen de bolitas de queso</string>
    <string name="desc_bebida">Imagen de bebida refrescante</string>
    <string name="desc_carrito">Icono de botón de carrito de compras</string>
    <string name="desc_eliminar">Icono de botón de eliminar</string>
    <string name="desc_cantidad">Icono de botón de cantidad de producto</string>
    <string name="desc_imagen">Imagen de producto</string>
    <string name="desc_atras">Icono de botón de flecha hacia atrás</string>

    <string name="mas">+</string>
    <string name="inicial">0</string>

    <string name="menos">-</string>

    <string name="opcion1">Historial de Pedidos</string>
    <string name="opcion2">Promociones</string>
    <string name="opcion3">Acerca de</string>

    <string name="historial">Historial</string>

    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="pedido_default">Pedido #123</string>
    <string name="fecha_default">Fecha: 2025-01-01</string>
    <string name="total_default">Total: $150</string>
</resources>