<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgProducto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:background="@drawable/image_border"
            android:contentDescription="@string/desc_imagen" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/tvNombreProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_producto"
                android:textSize="20sp"
                android:textColor="#333333"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrecioProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_producto"
                android:textSize="18sp"
                android:textColor="#333333"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/tvCantidadProducto"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:gravity="center"
                android:text="@string/inicial"
                android:textStyle="bold"
                android:textColor="#8B4513"
                android:background="@drawable/qty_badge" />

            <ImageView
                android:id="@+id/btnEliminarProducto"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/eliminar"
                android:contentDescription="@string/desc_eliminar" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
