<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarritoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="#F5E6D3"
            android:layout_marginBottom="24dp"
            android:elevation="2dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back_arrow"
                android:contentDescription="@string/desc_atras" />

            <TextView
                android:id="@+id/txt_titulo_carrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/carrito"
                android:textColor="#8B4513"
                android:textSize="40sp"
                android:textStyle="bold" />

        </RelativeLayout>



        <LinearLayout
            android:id="@+id/layoutCarrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSubtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F5E6D3"
            android:layout_marginBottom="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginTop="8dp"
                android:elevation="2dp">
                <TextView
                    android:id="@+id/txt_subtotal_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/formatoprecio"
                    android:textSize="27sp"
                    android:textColor="#8B4513"
                    android:textStyle="bold"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_pagar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/pagar"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#8B4513"
                android:elevation="4dp"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>
